--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Steffen's random thoughts
 description:
   This my personal blog, where I post about things that I do and find interesting.
-  All posts and thoughts on this blog are solely my opinion and are not related to my current employer.
+  All posts and thoughts on this blog are solely my opinion and are not related to my employer.
 github_username:  sscheib
 github: [metadata]
 
