--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -30,5 +30,5 @@ jobs:
           branch: 'gh-pages'
           jekyll_src: './'
           jekyll_cfg: '_config.yml'
-          jekyll_baseurl: ''
           cname: 'blog.scheib.me'
+          repository: 'https://github.com/sscheib/sscheib.github.io.git'
