--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,44 @@
-title: Steffen's random thoughts
-description:
+title: "Steffen's random thoughts"
+description: >-
   This my personal blog, where I post about things that I do and find interesting.
   All posts and thoughts on this blog are solely my opinion and are not related to my employer.
-github_username:  sscheib
-github: [metadata]
+github_username:  'sscheib'
+github: [
+  metadata
+]
 repository: 'sscheib/sscheib.github.io'
 
-remote_theme: jekyll/minima@v2.5.1
+remote_theme: 'jekyll/minima@v2.5.1'
 plugins:
-  - jekyll-feed
-  - jekyll-remote-theme
-  - jemoji
-  - jekyll-spaceship
-  - jekyll-gist
+  - 'jekyll-feed'
+  - 'jekyll-remote-theme'
+  - 'jemoji'
+  - 'jekyll-spaceship'
+  - 'jekyll-gist'
+  - 'jekyll-last-modified-at'
+  - 'premonition'
+
+last-modified-at:
+    date-format: '%b %-d, %Y'
 
 header_pages:
-  - index.md
-  - about.md
+  - 'index.md'
+  - 'about.md'
 
 minima:
-  skin: dark
+  skin: 'dark'
   social_links:
-    - { platform: github,  user_url: "https://github.com/sscheib" }
-    - { linkedin: linkedin,  user_url: "https://linkedin.com/in/sscheib" }
+    - {
+        platform: 'github',
+        user_url: 'https://github.com/sscheib'
+      }
 
-author: Steffen Scheib
+    - {
+        linkedin: 'linkedin',
+        user_url: 'https://linkedin.com/in/sscheib'
+      }
+
+author: 'Steffen Scheib'
 
 jekyll-spaceship:
   mermaid-processor:
