--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -6,10 +6,14 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  - name: 'markdownlint-cli'
-    uses: 'nosborn/github-action-markdown-cli@v3.3.0'
-    with:
-      files: './_posts/'
-      config_file: '.markdownlint.yml'
-      dot: false
+  build:
+    name: 'markdownlint-cli'
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: 'markdownlint-cli'
+        uses: 'nosborn/github-action-markdown-cli@v3.3.0'
+        with:
+          files: './_posts/'
+          config_file: '.markdownlint.yml'
+          dot: false
 ...
