--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -13,7 +13,7 @@ jobs:
       - name: 'markdownlint-cli'
         uses: 'nosborn/github-action-markdown-cli@v3.3.0'
         with:
-          files: './_posts/'
+          files: '_posts/'
           config_file: '.markdownlint.yml'
           dot: false
 ...
