Adding configuration file for markdown-link-check to ignore linux.die.net

--- a/.github/workflows/markdown-link-check.yml
+++ b/.github/workflows/markdown-link-check.yml
@@ -14,4 +14,5 @@ jobs:
       - uses: 'gaurav-nelson/github-action-markdown-link-check@v1'
         with:
           folder-path: '_posts/'
+          config-file: '.markdown-link-check.json'
 ...
