--- a/.github/spellcheck/spellcheck.yml
+++ b/.github/spellcheck/spellcheck.yml
@@ -31,7 +31,7 @@ matrix:
       - pyspelling.filters.url: {}
 
     sources:
-      - '_posts/*automating-satellite.md'
+      - '_posts/*highly*.md'
 
     default_encoding: 'utf-8'
     aspell:
