Adding yamllint pre-commit and workflow; Fixing yaml files; adding output artifact for spellcheck

--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -1,30 +1,32 @@
-name: Build and Deploy to Github Pages
-
-on:
+---
+name: 'Build and deploy to Github Pages'
+on:  # yamllint disable-line rule:truthy
   push:
     branches:
-      - main
+      - 'main'
 
 jobs:
   build_and_deploy:
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: actions/checkout@v3
+      - name: 'Checkout the repository'
+        uses: 'actions/checkout@v3'
 
-      # Use GitHub Actions' cache to cache dependencies on servers
-      - uses: actions/cache@v3
+      - name: 'Cache dependencies'
+        uses: 'actions/cache@v3'
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          path: 'vendor/bundle'
+          key: "${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}"
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      # Use GitHub Deploy Action to build and deploy to Github
-      - uses: jeffreytse/jekyll-deploy-action@v0.5.1
+      - name: 'Deploy to GitHub Pages'
+        uses: 'jeffreytse/jekyll-deploy-action@v0.5.1'
         with:
           provider: 'github'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: '${{ secrets.GITHUB_TOKEN }}'
           branch: 'gh-pages'
           jekyll_src: './'
           jekyll_cfg: '_config.yml'
           cname: 'blog.scheib.me'
+...
