--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -1,6 +1,6 @@
 ---
 name: 'markdownlint'
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['main']
   workflow_dispatch: {}
