Updating pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,30 @@
 ---
 repos:
-  - repo: 'local'
+  - repo: 'https://github.com/pre-commit/pre-commit-hooks'
+    rev: 'v4.5.0'
     hooks:
-      - id: 'jsonlint'
-        name: 'jsonlint'
-        language: 'node'
-        entry: 'jsonlint'
-        pass_filenames: false
-        verbose: true
+      - id: 'check-executables-have-shebangs'
+      - id: 'check-merge-conflict'
+      - id: 'check-shebang-scripts-are-executable'
+      - id: 'check-symlinks'
+      - id: 'check-toml'
+      - id: 'check-xml'
+      - id: 'debug-statements'
+      - id: 'destroyed-symlinks'
+      - id: 'detect-private-key'
+      - id: 'mixed-line-ending'
+        args:
+          - '--fix=no'
+      - id: 'trailing-whitespace'
 
   - repo: 'local'
     hooks:
       - id: 'pyspelling'
         name: 'pyspelling'
         language: 'python'
-        entry: 'pyspelling -c .github/spellcheck/spellcheck.yml -v'
-        pass_filenames: false
+        entry: 'pyspelling -c .github/spellcheck/spellcheck.yml -v --source'
+        files: '.+\.md$'
+        pass_filenames: true
         verbose: true
 
   - repo: 'local'
@@ -35,12 +44,15 @@ repos:
       - id: 'markdown-link-check'
         name: 'markdown-link-check'
         language: 'node'
-        entry: "find _posts/ -type f -iname '*.md' -exec markdown-link-check -vp -c .markdown-link-check.json {} \\;"
-        pass_filenames: false
+        entry: 'markdown-link-check -vp -c .markdown-link-check.json'
+        pass_filenames: true
+        files: '.+\.md$'
         verbose: true
 
   - repo: 'https://github.com/igorshubovych/markdownlint-cli'
     rev: 'v0.39.0'
     hooks:
       - id: 'markdownlint'
+        verbose: true
+        pass_filenames: true
 ...
