Updating pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,8 @@ repos:
         args:
           - '--fix=no'
       - id: 'trailing-whitespace'
+        args:
+          - '--markdown-linebreak-ext=md'
 
   - repo: 'local'
     hooks:
