--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,15 +40,16 @@ repos:
       - id: 'yamllint'
         pass_filenames: true
         verbose: true
-        strict: true
+        args:
+          - '--strict'
 
-#  - repo: 'https://github.com/facelessuser/pyspelling.git'
-#    # once a release with the pre-commit hook definition is released, this should be replaced (current release: 2.10)
-#    rev: '63e4654f0be643ca0f1676227db24bb7f88dee29'
-#    hooks:
-#      - id: 'pyspelling'
-#        pass_filenames: false
-#        verbose: true
+  - repo: 'https://github.com/facelessuser/pyspelling.git'
+    # once a release with the pre-commit hook definition is released, this should be replaced (current release: 2.10)
+    rev: '63e4654f0be643ca0f1676227db24bb7f88dee29'
+    hooks:
+      - id: 'pyspelling'
+        pass_filenames: false
+        verbose: true
 
   - repo: 'https://github.com/tcort/markdown-link-check.git'
     rev: 'v3.12.1'
