--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,10 +2,10 @@
 ci:
   autofix_prs: false
   skip:
-    - 'pyspelling'
-    - 'yamllint'
+    - 'commitlint'
     - 'markdown-link-check'
     - 'markdownlint'
+    - 'pyspelling'
 
 repos:
   - repo: 'https://github.com/pre-commit/pre-commit-hooks'
@@ -67,4 +67,23 @@ repos:
       - id: 'markdownlint'
         verbose: true
         pass_filenames: true
+
+  - repo: 'https://github.com/alessandrojcm/commitlint-pre-commit-hook'
+    rev: 'v9.14.0'
+    hooks:
+      - id: 'commitlint'
+        stages:
+          - 'commit-msg'
+        additional_dependencies:
+          - 'conventional-changelog-conventionalcommits'
+          - 'commitlint-plugin-selective-scope'
+
+  - repo: 'https://github.com/pre-commit/mirrors-jshint'
+    rev: 'v2.13.6'
+    hooks:
+      - id: 'jshint'
+        stages:
+          - 'pre-commit'
+        types:
+          - 'javascript'
 ...
