fix: Removing usage of plugin jekyll-last-modified-at
Removing jekyll-last-modified-at as the extension is no longer
maintained.
With that introducing a last_modified_at frontmatter attribute to each
post to build up the same functionality.
Further, adjusting the pyspelling configuration to ignore the attribute
last_modified_at (similar to author and title).

--- a/.github/spellcheck/spellcheck.yml
+++ b/.github/spellcheck/spellcheck.yml
@@ -100,7 +100,7 @@ matrix:
             # author: John and Jane Doe
             # ---
             #
-            - open: '(?s)^(?:title|author):'
+            - open: '(?s)^(?:title|author|last_modified_at):'
               content: '[^\n]+'
               close: '$'
 
