--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -21,7 +21,7 @@ jobs:
             ${{ runner.os }}-gems-
 
       - name: 'Deploy to GitHub Pages'
-        uses: 'jeffreytse/jekyll-deploy-action@v0.6.0'
+        uses: 'jeffreytse/jekyll-deploy-action@master'
         with:
           provider: 'github'
           token: '${{ secrets.GITHUB_TOKEN }}'
